[gd_scene load_steps=9 format=2]

[ext_resource path="res://textures/light.png" type="Texture" id=1]
[ext_resource path="res://scripts/jumpOrb.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 27.0

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 0, 0.941406, 1, 1, 1, 0, 0.878906, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 0.21
emission_shape = 1
emission_sphere_radius = 43.56
flag_disable_z = true
gravity = Vector3( 0, 0, 321 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
radial_accel = -100.0
tangential_accel = 100.0
scale = 2.0
scale_random = 1.0
color_ramp = SubResource( 5 )

[node name="jumpOrb" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.133333, 0.729412, 0.729412, 1 )
material = SubResource( 2 )
position = Vector2( 1.085, 0 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 3 )
emitting = false
amount = 112
local_coords = false
process_material = SubResource( 6 )

[connection signal="area_shape_entered" from="." to="." method="_on_jumpOrb_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_jumpOrb_area_shape_exited"]
